syntax = "proto3";

package auth_proto;

option go_package = "./pkg/infrastructure/pb";

service AuthService {
    rpc UserSignUp(SignUpRequest) returns (SignUpResponse);
    rpc UserOTPVerication(RequestOtpVefification) returns (ResponseOtpVerification);
    rpc UserLogin(RequestUserLogin) returns (ResponseUserLogin);
    rpc ForgotPasswordRequest(RequestForgotPass) returns (ResponseForgotPass);
    rpc ResetPassword(RequestResetPass)returns(ResponseErrorMessage);
    rpc Ping (PingRequest) returns (PingResponse);
}

message ResponseErrorMessage{
    string ErrorMessage=1;
}
message RequestUserLogin{
    string Email=1;
    string Password=2;
}
message ResponseUserLogin{
    string AccessToken=1;
    string RefreshToken=2;
    string ErrorMessage=3;
}
message RequestOtpVefification{
    string TempToken=1;
    string Otp=2;

}
message ResponseOtpVerification{
    string AccessToken=1;
    string RefreshToken=2;
    string ErrorMessage =3;
    string Otp=4;
}


message SignUpRequest{
    string UserName  =1;
    string Name = 2;
    string Email =3;
    string Password = 4;
    string ConfirmPassword = 5;
}

message SignUpResponse{
	string Token  =1;
    string ErrorMessage =2;
}

message RequestForgotPass{
    string Email = 1;
}
message ResponseForgotPass{
    string Token = 1;
    string ErrorMessage = 2;
}

message RequestResetPass{
    string Otp = 1;
    string Password =2;
    string ConfirmPassword =3;
    string TempToken= 4;
}
//optional
// message ResponseResetPass{
//     string Token =1;
//     string ErrorMessage =2;
// }
//
message PingRequest {}
message PingResponse {
  string message = 1;
}